--- a/vc14/otclient.vcxproj
+++ b/vc14/otclient.vcxproj
@@ -271,6 +271,7 @@
     <ClCompile Include="..\src\framework\ui\uiwidgettext.cpp" />
     <ClCompile Include="..\src\framework\util\color.cpp" />
     <ClCompile Include="..\src\framework\util\crypt.cpp" />
+    <ClCompile Include="..\src\framework\util\crypt_openssl.cpp" />
     <ClCompile Include="..\src\framework\xml\tinystr.cpp" />
     <ClCompile Include="..\src\framework\xml\tinyxml.cpp" />
     <ClCompile Include="..\src\framework\xml\tinyxmlerror.cpp" />
@@ -445,6 +446,7 @@
     <ClInclude Include="..\src\framework\ui\uiwidget.h" />
     <ClInclude Include="..\src\framework\util\color.h" />
     <ClInclude Include="..\src\framework\util\crypt.h" />
+    <ClInclude Include="..\src\framework\util\crypt_openssl.h" />
     <ClInclude Include="..\src\framework\util\databuffer.h" />
     <ClInclude Include="..\src\framework\util\matrix.h" />
     <ClInclude Include="..\src\framework\util\point.h" />
